Fix extra space below the top nav bar for mobile screens (#255)
* Remove the main title from the index page for a cleaner layout

* Use request.view_args for URL parameters for deck pagination (#254)

* Remove 90px bottom-padding for container CSS class styles

* Remove top margin for profile container

* Remove unnecessary bottom padding and margins for mobile layout

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -454,31 +454,7 @@
 }
 
 /* Add bottom padding to container on mobile to account for the nav bar */
-@media (max-width: 768px) {
-    .container {
-        padding-bottom: 90px !important; /* Increased from 70px to 90px for more space */
-    }
-    
-    /* Add bottom padding to additional containers that might be used */
-    .container-fluid, 
-    .container-sm, 
-    .container-md, 
-    .container-lg, 
-    .container-xl, 
-    .container-xxl {
-        padding-bottom: 90px !important;
-    }
-    
-    /* Add padding to other common bottom elements */
-    main, section:last-child, .card:last-child {
-        margin-bottom: 20px !important;
-    }
-    
-    /* Ensure the footer has sufficient padding if present */
-    footer {
-        margin-bottom: 90px !important;
-    }
-    
+@media (max-width: 768px) {    
     /* Make the bottom nav a bit more compact */
     .mobile-bottom-nav {
         display: flex;
@@ -488,21 +464,6 @@
     /* Hide theme toggle on mobile - it's less important */
     .theme-toggle-container {
         display: none;
-    }
-    
-    /* Additional spacing for elements that might appear at bottom of page */
-    .modal-footer, .card-footer, .alert:last-child {
-        margin-bottom: 15px !important;
-    }
-    
-    /* Ensure modals aren't cut off at bottom */
-    .modal-dialog {
-        margin-bottom: 100px;
-    }
-    
-    /* Extra padding at bottom of page to prevent content hiding under navigation */
-    html {
-        scroll-padding-bottom: 100px;
     }
     
     /* Improve interaction with mobile add menu */
